Full page complete with scroll animations and navmenu working well in both screens, i'll make a loading animation someday

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -95,6 +95,9 @@ code {
 .feedbackSwiper{
   overflow: visible!important;
 }
+@media only screen and (min-width: 768px){
+  
+}
 
 .swiper-button-next {
   position: absolute !important;
@@ -147,3 +150,4 @@ code {
 .ctadiv{
   background: radial-gradient(324.88% 141.42% at 100% 0%, #0C1E3E 0%, #040810 100%);
 }
+
